added linting and formatting rules
- prettier.js
- eslint
- run lint on Travis CI
- various eslint plugins for prettier.js and React.js stuff
- ignored vscode configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: minimal
 install:
   - curl -sL https://taskfile.dev/install.sh | sh
 script:
+  - npm test
   - |
     if [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST" = "false" ];
       then
